--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <textarea style="background-color: black; color: white;" rows="20" cols="160" id="code" placeholder="scrivi qui l'html"></textarea>
     </div>
     <br>
-    <img src="download.png" style="height: 30; width: 60;" onclick="scarica()">
+    <img src="download.png" style="height: 30px; width: 60px;" onclick="scarica()">
     <img src="edit.png" style="height: 30; width: 30;" onclick="edit()">
     <img src="ef.png" onclick="ef()" style="height: 30; width: 30;" >
     <h2></h2>
@@ -99,3 +99,4 @@
             </script>
          </body>
 </html>
+
