--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </div>
     <br>
     <img src="download.png" style="height: 30px; width: 60px;" onclick="scarica()">
-    <img src="edit.png" style="height: 30; width: 30;" onclick="edit()">
-    <img src="ef.png" onclick="ef()" style="height: 30; width: 30;" >
+    <img src="edit.png" style="height: 30px; width: 30px;" onclick="edit()">
+    <img src="ef.png" onclick="ef()" style="height: 30px; width: 30px;" >
     <h2></h2>
     <br>
         <button onclick="invia()" accesskey="Alt+z">Esegui il codice</button>
@@ -99,4 +99,5 @@
             </script>
          </body>
 </html>
+
 
